--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.2",
+    "@types/passport-jwt": "^3.0.11",
     "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4",
