--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@vitest/coverage-v8": "^0.34.6",
+    "dotenv": "^16.3.1",
     "prisma": "^5.4.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
