--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^5.4.2",
     "@types/passport-jwt": "^3.0.11",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -38,6 +39,7 @@
     "zod-validation-error": "^2.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
