--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
@@ -47,6 +47,7 @@
     "@swc/core": "^1.3.95",
     "@types/bcryptjs": "^2.4.5",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.15",
     "@vitest/coverage-v8": "^0.34.6",
